<?xml version="1.0" encoding="utf-8"?>
<!-- scroll view to be able to display on both landscape and portrait-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sunrise4">
<!-- constraint view to hold all views -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- App name banner -->
        <TextView
            android:id="@+id/title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="70dp"
            android:fontFamily="@font/henny_penny"
            android:text="@string/authorize"
            android:textColor="@color/maintext"
            android:textSize="80sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- slogan for the app -->
        <TextView
            android:id="@+id/slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="102dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="102dp"
            android:fontFamily="@font/abril_fatface"
            android:text="@string/slogan"
            android:textColor="@color/maintext"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title1" />

        <!-- the app logo -->
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="104dp"
            android:layout_marginEnd="56dp"
            android:contentDescription="@string/lock"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title1"
            app:srcCompat="@drawable/logo" />


    </androidx.constraintlayout.widget.ConstraintLayout>





</ScrollView>